--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           tool_versions: |
             action-validator 0.1.2
-            bats v1.3.0
+            bats 1.3.0
             shellcheck 0.8.0
             semver 3.3.0
 
