--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,24 +1,44 @@
 name: Unit Tests and Linters
 
-# Run this workflow every time a new commit pushed to your repository
-on: push
-
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
-  # Set the job key. The key is displayed as the job name
-  # when a job name is not provided
   test-lint:
-    # Name the Job
     name: Unit tests and Lint code base
-    # Set the type of machine to run on
     runs-on: ubuntu-latest
 
     steps:
-      # Checks out a copy of your repository on the ubuntu-latest machine
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Install dependencies with asdf
+        uses: asdf-vm/actions/install@v1
+        with:
+          tool_versions: |
+            bats 1.3.0
+            shellcheck 0.8.0
+            semver 3.3.0
+
+      - name: Display semver help
+        run: |
+          echo "Use semver locally or in your workflow!"
+          echo "asdf plugin add semver"
+          echo "asdf install semver latest"
+          echo "asdf global semver latest"
+          echo "semver --version"
+          semver --version
+          echo "semver --help"
+          semver --help
+
+      - name: Shellcheck linter
+        run: |
+          shellcheck src/semver
+          shellcheck test/documentation-test
+
       - name: Unit tests
-        shell: bash
-        run: make test
-      - name: Linter
-        shell: bash
-        run: make lint
+        run: bats test
