--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,41 +4,19 @@ on:
   push:
     branches:
       - master
+      - issue_74
   pull_request:
     branches:
       - master
+
 jobs:
   test-lint:
-    name: Unit tests and Lint code base
+    name: Test and Lint code base
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install dependencies with asdf
-        uses: asdf-vm/actions/install@v1
-        with:
-          tool_versions: |
-            bats 1.3.0
-            shellcheck 0.8.0
-            semver 3.3.0
-
-      - name: Display semver help
-        run: |
-          echo "Use semver locally or in your workflow!"
-          echo "asdf plugin add semver"
-          echo "asdf install semver latest"
-          echo "asdf global semver latest"
-          echo "semver --version"
-          semver --version
-          echo "semver --help"
-          semver --help
-
-      - name: Shellcheck linter
-        run: |
-          shellcheck src/semver
-          shellcheck test/documentation-test
-
-      - name: Unit tests
-        run: bats test
+      - name: Test stable
+        run: make test-stable
